# RAG

./: Makefile  README.md  docker-compose.yaml  pyproject.toml
apps/my_sample_api/: pyproject.toml
apps/my_sample_api/src/: main.py
src/api/: Dockerfile  main.py  routers.py
src/schemas/: collection.py  document.py  search.py
src/services/: collections.py  db.py
