[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.5",
    "langchain>=0.3.7",
    "pgvector>=0.3.6",
    "pydantic>=2.9.2",
    "ruff>=0.7.4",
    "streamlit>=1.40.1",
    "typer>=0.13.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
start_api = "uvicorn src.api.main:app --host 0.0.0.0 --port 8000"
