# rag project depends on the rag_aas project, which is a member of the workspace.
[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rag_aas",
]

[tool.uv.sources]
# indicates the rag_aas dependency should be provided by the workspace
#  rather than fetched from PyPI or another registr
rag_aas = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = []

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
